# psyched

./: .gitignore  AGENTS.md  Cargo.toml  LCARS-CHEATSHEET.md  Makefile  README.md  bringup  dnsmasq.conf  psh  psh.rs  setup  teardown  workspace_env.sh
.cargo/: config.toml
.github/: copilot-instructions.md  copilot-setup-steps.yaml
.github/workflows/: e2e.yml
asr-core/: Cargo.toml
asr-core/src/: lib.rs  messages.rs  pipeline.rs
asr-fast/: Cargo.toml
asr-fast/src/: main.rs  pipeline.rs
asr-long/: Cargo.toml
asr-long/src/: main.rs  pipeline.rs  server.rs
asr-mid/: Cargo.toml
asr-mid/src/: main.rs  pipeline.rs
asr-service/: Cargo.toml
asr-service/src/: config.rs  lib.rs  main.rs  server.rs
asr-service/src/core/: audio.rs  errors.rs  pipeline.rs  recognizer.rs
asr-service/src/pipelines/: fast.rs  long.rs  medium.rs
asr-service/src/static/: websocket_tester.html
compose/: speech-stack.compose.yml
docker/: Dockerfile  asr-fast.Dockerfile  asr-service.Dockerfile  compose.yml  forebrain-llm.Dockerfile  tts-websocket.Dockerfile
docs/: SERVICE_MANAGEMENT.md  SYSTEMD_SERVICES.md  docker.md  host-manifests.md  psh-sys.md  reboot-sentinel.md
env/: AGENTS.md  psyched_env.sh
forebrain-llm/: Cargo.toml
forebrain-llm/src/: config.rs  lib.rs  main.rs  model.rs  session.rs  ws.rs
hosts/: AGENTS.md  cerebellum.toml  forebrain.json  forebrain.toml  motherbrain.json  motherbrain.toml
modules/chat/: chat.launch.sh  chat.shutdown.sh  launch.sh  launch_unit.sh  module.toml  pilot_controls.json  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
modules/cockpit/: AGENTS.md  frontend  launch_unit.sh  module.toml  shutdown_unit.sh
modules/conversant/: AGENTS.md  launch_unit.sh  module.toml  shutdown_unit.sh
modules/ear/: AGENTS.md  ear.launch.sh  ear.shutdown.sh  launch.sh  launch_unit.sh  module.toml  pilot_controls.json  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
modules/eye/: AGENTS.md  eye.launch.sh  eye.shutdown.sh  launch.sh  launch_unit.sh  module.toml  pilot_controls.json  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
modules/faces/: faces.launch.sh  faces.shutdown.sh  launch_unit.sh  module.toml  shutdown_unit.sh
modules/felt/: AGENTS.md  launch_unit.sh  module.toml  shutdown_unit.sh
modules/foot/: AGENTS.md  apply_patches.sh  foot.launch.sh  launch.sh  launch_unit.sh  module.toml  pilot_controls.json  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
modules/gps/: AGENTS.md  gps.launch.sh  gps.shutdown.sh  launch.sh  launch_unit.sh  module.toml  pilot_controls.json  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
modules/hypothalamus/: AGENTS.md  launch_unit.sh  module.toml  shutdown_unit.sh
modules/imu/: AGENTS.md  apply_patches.sh  imu.launch.sh  imu.shutdown.sh  launch.sh  launch_unit.sh  module.toml  pilot_controls.json  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
modules/memory/: AGENTS.md  launch_unit.sh  module.toml  shutdown_unit.sh
modules/mpu6050/: launch.sh  setup.sh  shutdown.sh  teardown.sh
modules/nav/: AGENTS.md  launch.sh  launch_unit.sh  module.toml  nav.launch.sh  nav.shutdown.sh  pilot_controls.json  record_bag.sh  save_map.sh  setup.sh  shutdown.sh  shutdown_unit.sh  teardown.sh
psh/: Cargo.toml  clean.ts  cli.ts  cli_summary.ts  cli_test.ts  colcon.ts  colcon_test.ts  deno.json  download_models.ts  install.ts  main.ts  mod.ts  mod_test.ts  module_resolution_test.ts  modules.ts  modules_test.ts  psh_env.ts  reqs.ts  setup.ts  setup_test.ts  speech_setup.ts  speech_stack.ts  speech_stack_test.ts  systemd.ts  systemd_test.ts  systemd_uninstall.ts  test_speech_stack.ts  test_utils.ts  uninstall.ts  util.ts
psyched/: CMakeLists.txt  Cargo.toml  package.xml
psyched-msgs/: Cargo.toml
psyched/launch/: cockpit.launch.py
scripts/: dev.sh  status.sh
services/asr/app/: Cargo.toml
services/asr/app/src/: main.rs
services/asr/app/static/: harness.html
src/: .gitignore  psyched  psyched-msgs
src/psyched/: CMakeLists.txt  package.xml
src/psyched/launch/: psyched_launch.py
src/psyched/scripts/: psyched_node.py
src/psyched/src/: psyched_cpp_node.cpp
tests/: bootstrap_profile_test.sh  bootstrap_script_dir_test.sh  install_ros2_script_test.sh  psyched_env_test.sh  reboot_sentinel_test.sh  test_face_detector_dependencies.py  test_face_embedding_websocket_server.py  test_launch_args.py
tools/: README.md  __init__.py  bringup  clean_workspace  cron_manager.sh  dev.sh  download_speech_models.sh  install_cuda.sh  install_docker.sh  install_piper.sh  install_ros2.sh  install_wifi.sh  launch_args.py  manage_services.sh  run  setup  setup_env.sh  setup_env_cached.sh  stop  systemd_entrypoint.sh  systemd_generate  teardown  test_tts_ws.py  with_ros_env.sh
tools/psh/: Cargo.toml  deno.json  main.ts
tools/psh/lib/: build.ts  build_test.ts  clean.ts  clean_test.ts  docker_env.ts  docker_env_test.ts  host.ts  host_config.ts  host_power.ts  host_power_test.ts  host_targets.ts  host_targets_test.ts  host_test.ts  module.ts  module_test.ts  paths.ts  paths_test.ts  reboot_guard.ts  reboot_guard_test.ts  ros.ts  ros_container.ts  ros_container_test.ts  ros_env.ts  service.ts  service_test.ts  systemd.ts  systemd_test.ts  target_resolver.ts  target_resolver_test.ts  user_groups.ts  user_groups_test.ts  wizard.ts  wizard_test.ts  workflow.ts  workflow_test.ts  workspace.ts
tools/psh/lib/ui/: status.ts  status_test.ts
tools/psh/scripts/: download_speech_models.sh  prefix_logs.sh
tools/psh/src/: app.rs  cli.rs  command_runner.rs  environment.rs  host.rs  layout.rs  main.rs  util.rs
vendor_msgs/: README.md
vendor_msgs/nav_msgs/: Cargo.toml  build.rs
vendor_msgs/nav_msgs/src/: lib.rs  msg.rs  srv.rs
vendor_msgs/sensor_msgs/: Cargo.toml  build.rs
vendor_msgs/sensor_msgs/src/: lib.rs  msg.rs  srv.rs
(+627 files in other folders)
