[package]
name = "psh"
version = "0.1.0"
edition = "2021"
description = "Psyched shell CLI"
license = "Apache-2.0"
authors = ["Psyched Contributors"]

[[bin]]
name = "psh"
path = "psh.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
