[package]
name = "asr-fast"
version = "0.1.0"
edition = "2021"

[dependencies]
asr-core = { path = "../asr-core" }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"

[dev-dependencies]
base64 = "0.21"
