<?xml version="1.0"?>
<package format="3">
  <name>psyched</name>
  <version>0.1.0</version>
  <description>Core Rust ROS 2 nodes (cockpit, …)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- <depend>psyched_msgs</depend> -->

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
