[package]
name = "sensor_msgs"
version = "5.8.3"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }
builtin_interfaces = "*"
geometry_msgs = "*"
service_msgs = "*"
std_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'builtin_interfaces/serde', 'geometry_msgs/serde', 'service_msgs/serde', 'std_msgs/serde']
