[package]
name = "whisper-asr"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Pete Rizzlington Ops <ops@peterizzlington.io>"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
futures = "0.3"
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
whisper-rs = { version = "0.11", default-features = false, features = [
    "dynamic",
] }
num_cpus = "1"
